[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Player/Head5.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Head4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Head3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Head2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Hands4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Hands3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Head1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Hands1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Hands2.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Player/PlayerControllerV2.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 169.276
height = 109.36

[sub_resource type="CircleShape2D" id=3]
radius = 32.8581

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 420.0

[node name="Hands" type="RigidBody2D"]
position = Vector2( -211.023, -1.12247 )
gravity_scale = 32.08
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 10 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 0.943817, -4.57764e-05 )
node_a = NodePath("../Head")
node_b = NodePath("..")
bias = 0.9
disable_collision = false
softness = 1.4

[node name="HandsSprite" type="AnimatedSprite" parent="."]
position = Vector2( 129.514, 2.17055 )
rotation = 1.57079
scale = Vector2( 0.340594, 0.340594 )
frames = SubResource( 1 )

[node name="HandsCollider" type="CollisionShape2D" parent="."]
position = Vector2( 40.2557, -1.74574 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="HandsSwingPos" type="Position2D" parent="."]
position = Vector2( 212.561, 2.00001 )

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2( -15.6408, 0.765289 )
contacts_reported = 5
contact_monitor = true
can_sleep = false

[node name="HeadCollider" type="CollisionShape2D" parent="Head"]
position = Vector2( -0.973854, -0.717587 )
shape = SubResource( 3 )
disabled = true

[node name="HeadSprite" type="AnimatedSprite" parent="Head"]
position = Vector2( 11.2307, -1.28589 )
rotation = 1.57079
scale = Vector2( 0.403669, 0.400515 )
frames = SubResource( 4 )

[node name="BodyTouchable" type="TouchScreenButton" parent="Head/HeadSprite"]
position = Vector2( -0.000816345, 30.0506 )
shape = SubResource( 5 )
shape_centered = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
